metrics/prometheus/main/httproute-authentik/auth.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  # all auth policies are in the same namespace
  # use namespace.httproute_name schema to avoid name collisions
  name: prometheus.prometheus-main-authentik
  # when auth policy is in the root namespace (where istiod is located) it is applied to the whole cluster
  # namespace: istio
  # when auth policy is in custom namespace, it only applies to gateways in this namespace
  namespace: gateways
spec:
  selector:
    matchLabels:
      gateway.istio.io/managed: istio.io-gateway-controller
  action: CUSTOM
  provider:
    name: authentik
  rules:
  - to:
    - operation:
        hosts:
        - prometheus-main-authentik.suffix-automatic-replace
